@@ -208,6 +208,20 @@
 			</properties>
 		</profile>
 		<profile>
+			<id>jdk-18-to-xx</id>
+			<activation>
+				<jdk>[18,)</jdk>
+			</activation>
+			<properties>
+				<!--
+					JEP 411: Deprecate the Security Manager for Removal, see https://openjdk.java.net/jeps/411.
+					As of Java 18, the new API for blocking System.exit is not available yet, see
+					https://bugs.openjdk.java.net/browse/JDK-8199704.
+				-->
+				<jvm.arg.addOpens>-Djava.security.manager=allow</jvm.arg.addOpens>
+			</properties>
+		</profile>
+		<profile>
 			<id>release</id>
 			<properties>
 				<maven.javadoc.skip>false</maven.javadoc.skip>
